# MySelenium

AirPeace/: active_nexts_flights.json  air_peace.py  air_peace2.py  air_peace3.py  air_peace4.py  airpeace_flights.py  more_flights.json
InstaBot/: pyproject.toml
InstaBot/instabot/: extraction.py  insta.bat  instacct.py  instacct2.py  instagram.py  process_follow.py  storelinks.txt  storenames.txt  tiktok_act.py  tiktok_actCopy.py
InstaBot/instabot/links/: davido.json  thethunderboltsproject.json
trinix/: pyproject.toml
trinix/trinix/: app.py  index.html
trinix/trinix/assets/: index.css  style.css  togglefunc.js
